update multi view pages for designs.. update reports view design

--- a/src/elements/guuey-date-input/guuey-date-input.html
+++ b/src/elements/guuey-date-input/guuey-date-input.html
@@ -5,6 +5,10 @@
 
     <style include="paper-date-picker-dialog-style">
 
+      :host{
+        display:block;
+      }
+
       paper-button{
         background-color:#41847d;
         color:#FFFFFF;
