--- a/src/pages/care-plan/su-care-review/su-care-review-multi-view.html
+++ b/src/pages/care-plan/su-care-review/su-care-review-multi-view.html
@@ -38,23 +38,23 @@
       background-size:cover;
       background-position:bottom right;
     }
+    .multiCardHeading:hover{
+      cursor:pointer;
+      opacity:.8;
+    }
     .multiCardLabel{
       width:75%;
       position:absolute;
-      bottom:10%;
-      left:5%;
+      bottom:10px;
+      left:10px;
       padding:0px;
       margin:0px;
-      font-weight:bold;
       color:#FFFFFF;
-      font-size:20px;
+      line-height:22px;
+      font-size:22px;
       overflow:hidden;
       text-overflow:ellipsis;
       max-height:100%;
-    }
-    .multiCardLabel:hover{
-      cursor:pointer;
-      opacity:.8;
     }
     .multiCardMore{
       position:absolute;
