--- a/src/pages/care-plan/su-goals/su-goals-multi-view.html
+++ b/src/pages/care-plan/su-goals/su-goals-multi-view.html
@@ -33,32 +33,27 @@
         --app-grid-columns:3;
         --app-grid-item-height:150%;
       }
-      .goalLabel:hover{
-        cursor:pointer;
-        opacity:.8;
-      }
       .goalLabel:nth-child(1){
         width:100%;
         position:absolute;
-        bottom:50%;
-        left:5%;
+        bottom:32px;
+        left:10px;
         padding:0px;
         margin:0px;
-        font-weight:bold;
         color:#FFFFFF;
-        font-size:20px;
-
+        line-height:22px;
+        font-size:22px;
       }
       .goalLabel:nth-child(2){
         width:100%;
         position:absolute;
-        bottom:25%;
-        left:5%;
+        bottom:10px;
+        left:10px;
         padding:0px;
         margin:0px;
-        font-weight:bold;
         color:#FFFFFF;
-        font-size:20px;
+        line-height:22px;
+        font-size:22px;
       }
       .goalMore{
         position:absolute;
@@ -77,6 +72,10 @@
         background-repeat:no-repeat;
         background-size:cover;
         background-position:bottom right;
+      }
+      .goalHeading:hover{
+        cursor:pointer;
+        opacity:.8;
       }
       .goalDescription{
         text-align:center;
@@ -103,6 +102,9 @@
       }
       .goalProgress{
         width:100%;
+        position:absolute;
+        bottom:20%;
+        left:0;
       }
       .goalDetails{
         width:90%;
