--- a/src/pages/care-plan/su-risk/su-risk-multi-view.html
+++ b/src/pages/care-plan/su-risk/su-risk-multi-view.html
@@ -47,32 +47,31 @@
         background-size:cover;
         background-position:bottom right;
       }
-      .riskLabel:hover{
+      .riskHeading:hover{
         cursor:pointer;
         opacity:.8;
       }
       .riskLabel:nth-child(1){
         width:100%;
         position:absolute;
-        bottom:50%;
-        left:5%;
+        bottom:37px;
+        left:10px;
         padding:0px;
         margin:0px;
-        font-weight:bold;
         color:#FFFFFF;
-        font-size:20px;
-
+        font-size:22px;
+        line-height:22px;
       }
       .riskLabel:nth-child(2){
         width:100%;
         position:absolute;
-        bottom:25%;
-        left:5%;
+        bottom:10px;
+        left:10px;
         padding:0px;
         margin:0px;
-        font-weight:bold;
         color:#FFFFFF;
-        font-size:20px;
+        font-size:22px;
+        line-height:22px;
       }
       .riskMore{
         position:absolute;
@@ -104,6 +103,7 @@
         width:100%;
         text-align:left;
         margin-left:20px;
+        font-weight:bold;
       }
       .riskDate{
         flex-grow:1;
