--- a/src/elements/guuey-slider/guuey-slider.html
+++ b/src/elements/guuey-slider/guuey-slider.html
@@ -4,6 +4,9 @@
   <template>
 
     <style>
+      :host{
+        display:block;
+      }
       .sliderContainer{
         display:flex;
         flex-direction:row;
@@ -38,13 +41,13 @@
         position:absolute;
         bottom:5px;
         left:5px;
-        color:#43A047;
+        opacity:.8;
       }
       #danger{
         position:absolute;
         bottom:5px;
         right:5px;
-        color:#E53935;
+        opacity:.8;
       }
     </style>
 
