--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -45,6 +45,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .vert-padded{
         padding:20px 0 20px 0;
       }
+      .horiz-padded{
+        padding:0 20px 0 20px;
+      }
       .guuey-button{
         background-color: #009688;
         color:#FFF;
