created feedback element

--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -33,6 +33,7 @@
 
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
 <link rel="import" href="elements/firebase-storage/firebase-storage.html" />
+<link rel="import" href="elements/guuey-bug-report/guuey-bug-report.html" />
 
 <link rel="import" href="behaviors/shell-resize-behavior.html" />
 
