--- a/src/my-app.html
+++ b/src/my-app.html
@@ -132,6 +132,8 @@
     </div>
     <div class="loginOverlay"></div>
 
+    <guuey-bug-report home="[[home]]" page="[[page]]" patient="[[param]]" user="[[user]]"></guuey-bug-report>
+
     <app-drawer-layout responsive-width="1023px" fullbleed id="appDrawerLayout">
 
       <!--admin drawer that contains admin account info and functions-->
