--- a/src/pages/care-plan/su-risk/su-risk-multi-view.html
+++ b/src/pages/care-plan/su-risk/su-risk-multi-view.html
@@ -90,7 +90,7 @@
 
       }
       .riskCardText{
-        flex-grow:1;
+        flex-grow:2;
         margin:10px;
         overflow:hidden;
         white-space:nowrap;
@@ -118,6 +118,7 @@
         flex-grow:1;
         text-align:left;
         margin-left:20px;
+
         opacity:.8;
       }
 
@@ -155,7 +156,7 @@
             </div>
 
             <div class="multiCardContainer">
-              <guuey-slider class="riskSlider" value="{{risk.riskLevel}}">
+              <guuey-slider hide-value class="riskSlider" value="{{risk.riskLevel}}">
               </guuey-slider>
 
               <p class="riskCardText">
