--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -34,9 +34,11 @@
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
 <link rel="import" href="elements/firebase-storage/firebase-storage.html" />
 <link rel="import" href="elements/guuey-bug-report/guuey-bug-report.html" />
-
+<link rel="import" href="elements/media-queries/media-queries.html" />
 <link rel="import" href="behaviors/shell-resize-behavior.html" />
 
 <link rel="import" href="styles/app-shell-styles.html" />
 
 <link rel="import" href="icons/custom-icons.html" />
+
+<link rel="import" href="pages/test/test-test/other-element.html" />
